[package]
name = "fast_verlet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfml = "0.20.0"
rayon = "1.5.1"

[profile.release]
opt-level = 3               # Use slightly better optimizations.
lto = "fat"